--- a/views/home.ejs
+++ b/views/home.ejs
@@ -40,7 +40,7 @@
             </div>
             <div class="notes">
                 <div class="note_items">
-                    "WORK HARD"
+                    "Set your Priorities.."
                 </div>
                 <div class="note_items">
                     "YOU CAN'T GO BACK AND CHANGE THE BEGINNING,
