--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,14 +24,14 @@
             <nav class="navigation">
                 <div class="about_link">
                     <a href="/about"> About</a>
-                </div> 
+                </div>
                 <div class="about_link">
                     <label class="switch">
                         <input type="checkbox" id="dark-mode-toggle">
                         <span class="slider"></span>
-                      </label>                      
+                    </label>
                 </div>
-               
+
             </nav>
         </header>
         <main class="container">
@@ -40,40 +40,38 @@
             </div>
             <div class="notes">
                 <div class="note_items">
-                    "Set your Priorities.."
+                    "NATION"
                 </div>
                 <div class="note_items">
                     "YOU CAN'T GO BACK AND CHANGE THE BEGINNING,
                     BUT YOU CAN START WHERE YOU ARE AND CHANGE THE ENDING"
                 </div>
-                <!-- <ul>
-                    <li>
-                       to imort through form.....
-                    </li>
-                </ul> -->
+                <div class="note_items">
+                    "YOU ARE NOT UNIQUE UNTIL ....."
+                </div>
             </div>
         </main>
         <footer>
             <div class="footer_title">
-                
+
             </div>
         </footer>
     </section>
 
 
 
-<script>
-    const toggleSwitch = document.querySelector('#dark-mode-toggle');
+    <script>
+        const toggleSwitch = document.querySelector('#dark-mode-toggle');
 
-toggleSwitch.addEventListener('change', function() {
-  if(this.checked) {
-    document.body.classList.add('dark-mode');
-  } else {
-    document.body.classList.remove('dark-mode');
-  }    
-});
+        toggleSwitch.addEventListener('change', function () {
+            if (this.checked) {
+                document.body.classList.add('dark-mode');
+            } else {
+                document.body.classList.remove('dark-mode');
+            }
+        });
 
-</script>
+    </script>
 
 </body>
 
