--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,6 +34,12 @@ li {
 
 }
 
+button {
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
 /* Light mode */
 body {
   background-color: var(--bg-color-light);
@@ -59,6 +65,7 @@ body {
   justify-content: space-between;
   align-items: center;
   font-family: 'Space Mono', monospace;
+  
 }
 
 /* Heading styles */
@@ -66,6 +73,7 @@ body {
   font-size: 2.0rem;
   font-family: 'Sora', sans-serif;
   font-weight: 900;
+  border: var(--bg-color-dark) 2px solid;
 }
 
 /* Navigation styles */
@@ -84,12 +92,11 @@ body {
 
 /* Note item styles */
 .note_items {
-  font-family: 'Karantina', cursive;
-  font-weight: 400;
+  font-family: 'Sora', sans-serif;
   font-size: 1.5rem;
   letter-spacing: 2px;
   margin: 1rem 0;
-  text-transform: uppercase;
+  
 }
 
 /* Horizontal line after note items */
@@ -99,6 +106,11 @@ body {
   border-bottom: 1px solid var(--text-color-light);
 }
 
+.delete button{
+  color: red;
+  cursor: pointer;
+  font-family: monospace;
+}
 /* Toggle switch styles */
 .switch {
   position: relative;
@@ -174,7 +186,7 @@ input:checked+.slider:before {
 }
 
 .note_items:hover {
-  color: #1765a4;
+  color: #e0ca3c;
   /* background-color: #dcdcdc; */
 }
 
@@ -210,7 +222,7 @@ input:checked+.slider:before {
 
   .note_items {
 
-    font-size: 2rem;
+    
   }
 
   .post_title {
