--- a/views/post.ejs
+++ b/views/post.ejs
@@ -4,6 +4,11 @@
         <div class="post_title">
             <%=title%>
         </div>
+        <div class="delete">
+            <form method="POST" action="/posts/<%= id %>?_method=DELETE">
+                <button>Delete</button>
+            </form>
+        </div>
         <div class="post_content">
             <%=content%>
         </div>
@@ -11,3 +16,15 @@
     </section>
 
     <%- include("partials/footer"); -%>
+        <script>
+            const toggleSwitch = document.querySelector('#dark-mode-toggle');
+
+            toggleSwitch.addEventListener('change', function () {
+                if (this.checked) {
+                    document.body.classList.add('dark-mode');
+                } else {
+                    document.body.classList.remove('dark-mode');
+                }
+            });
+
+        </script>
